Fix bookmarks size on small screen

--- a/src/BymseRead.Ui/front/src/styles/book/bookmarks/bookmarks.scss
+++ b/src/BymseRead.Ui/front/src/styles/book/bookmarks/bookmarks.scss
@@ -32,6 +32,8 @@
   display: flex;
   align-items: center;
   white-space: nowrap;
+  flex: 1;
+  justify-content: center;
 
   &:active {
     background-color: var(--color-secondary-o9);
