--- a/src/BymseRead.Ui/front/src/styles/common/common.scss
+++ b/src/BymseRead.Ui/front/src/styles/common/common.scss
@@ -60,6 +60,7 @@ input, button {
 
 #app {
     height: 100%;
+    min-width: 710px;
 }
 
 .container {
